--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
 
         <ul class="deck">
         </ul>
+
+
+
+      <div class="modal">
+      	<div class="modal-message">
+      		<p class="win-message">Congratulations.<br>Wants to play again?click on Restart Button</p>
+      		<p>Number of moves to complete it:</p>
+      		<span class="successMoves"</span>
+
+      			<p>In <span id="totalHours"></span> Hours,<span id="totalMinutes"></span> Minutes and <span id="totalSeconds"></span>Seconds</p>
+
+      			<p>Your Star Ranking is:</p>
+      			<span class="playerRanking"></span>
+      	 </div>
+      	 <button class="play-again"> Play Again?</button>
+      	</div>
+
+
+
+  
+
+
+
+
+
     </div>
 
     <script src="js/app.js"></script>
