--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
         </ul>
 
 
+<div id="myModal" class="modal">
+        <div class="modal-message">
+          <p class="win-message">Congratulations.<br>You have Won the match</p>
+          <p>Number of moves to complete it:</p>
+          <span class="successMoves"></span>
 
-      <div class="modal">
-      	<div class="modal-message">
-      		<p class="win-message">Congratulations.<br>Wants to play again?click on Restart Button</p>
-      		<p>Number of moves to complete it:</p>
-      		<span class="successMoves"</span>
+            <p>In <span id="totalHours"></span> Hours,<span id="totalMinutes"></span> Minutes and <span id="totalSeconds"></span>Seconds</p>
 
-      			<p>In <span id="totalHours"></span> Hours,<span id="totalMinutes"></span> Minutes and <span id="totalSeconds"></span>Seconds</p>
-
-      			<p>Your Star Ranking is:</p>
-      			<span class="playerRanking"></span>
-      	 </div>
-      	 <button class="play-again"> Play Again?</button>
-      	</div>
-
+            <p>Your Star Ranking is:</p>
+            <span class="playerRanking"></span>
+         </div>
+         <div>
+        <center><button class="play-again">Play Again</button>
+        <button class="close">Close</button></center>
+    </div>
+        </div>
 
 
   
